--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router": "^7.11.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
