--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react": "^19.0.0-rc.1",
     "react-dom": "^19.0.0-rc.1",
     "react-leaflet": "^5.0.0-rc.2",
+    "react-loader-spinner": "^8.0.2",
     "react-router": "^7.11.0",
     "react-router-dom": "^7.13.0"
   },
