--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "react": "^19.0.0-rc.1",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^19.0.0-rc.1",
     "react-leaflet": "^5.0.0-rc.2",
     "react-loader-spinner": "^8.0.2",
